--- a/style.less
+++ b/style.less
@@ -15,6 +15,7 @@ html, body {
 
 body {
     background-color: #404040;
+    background-image:initial;
 
     > img,
     > table {
@@ -455,6 +456,7 @@ body {
                 > a:hover {
                     color: white;
                     background-color: #1067A0;
+                    background-image:initial!important;
                 }
             }
         }
