--- a/style.css
+++ b/style.css
@@ -32,11 +32,16 @@ body .table2 {
   display: inline-flex;
 }
 #browse > #main > #content > .content-box {
-  width: initial !important;
+  width: 100% !important;
+  max-width: 750px;
   border: initial !important;
   background-color: initial !important;
   margin: 0 auto;
   line-height: 0;
+  -webkit-flex-grow: 1;
+  -moz-flex-grow: 1;
+  -ms-flex-grow: 1;
+  flex-grow: 1;
 }
 #browse > #main > #content > .content-box > p,
 #browse > #main > #content > .content-box > h2,
@@ -167,6 +172,36 @@ body .table2 {
 }
 #browse > #main > #content > .content-box > h1 > strong > font {
   color: white;
+}
+#browse > #main > #content > .content-box > form > table .form_info,
+#browse > #main > #content > .content-box > form > table {
+  color: white;
+}
+#browse > #main > #content > .content-box > form > table {
+  border-collapse: collapse;
+}
+#browse > #main > #content > .content-box > form > table > tbody > tr:nth-child(even) {
+  background-color: #505050;
+}
+#browse > #main > #content > .content-box > form > table > tbody > tr > td {
+  padding: 10px;
+  border: 1px solid black;
+}
+#browse > #main > #content > .content-box > form > table > tbody > tr > td > table {
+  width: 100%;
+}
+#browse > #main > #content > .content-box > form > table > tbody > tr > td > input[type=text] {
+  width: 100%;
+  height: 30px;
+  line-height: 28px;
+  padding: 0 10px;
+  border: 1px solid black;
+}
+#browse > #main > #content > .content-box > form > table > tbody > tr > td > label input[type=radio] {
+  margin-right: 5px;
+}
+#browse > #main > #content > .content-box > form > table > tbody > tr > td > label + label {
+  margin-left: 10px;
 }
 #video > #main > #content {
   display: -webkit-flex;
@@ -447,6 +482,7 @@ body .table2 {
 #main > #menu > #nav > li > .dropdown2 > .col1 > ul > li > a:hover {
   color: white;
   background-color: #606060;
+  background-image: initial;
 }
 #main > #menu > #nav > li > a {
   padding: 10px 15px;
@@ -456,5 +492,5 @@ body .table2 {
 #main > #menu > #nav > li > a:hover {
   color: white;
   background-color: #1067A0;
-  background-image: initial!important;
+  background-image: initial !important;
 }
