--- a/style.less
+++ b/style.less
@@ -15,7 +15,7 @@ html, body {
 
 body {
     background-color: #404040;
-    background-image:initial;
+    background-image: initial;
 
     > img,
     > table {
@@ -35,11 +35,13 @@ body {
         .flex-display(inline-flex);
 
         > .content-box {
-            width: initial !important;
+            width: 100% !important;
+            max-width:750px;
             border: initial !important;
             background-color: initial !important;
             margin: 0 auto;
             line-height: 0;
+            .flex-grow(1);
 
             > p,
             > h2,
@@ -168,6 +170,52 @@ body {
 
                 > strong > font {
                     color: white;
+                }
+            }
+
+            > form {
+                > table .form_info,
+                > table {
+                    color: white;
+                }
+
+                > table {
+                    border-collapse: collapse;
+
+                    > tbody {
+                        > tr:nth-child(even) {
+                            background-color: #505050;
+                        }
+
+                        > tr {
+                            > td {
+                                padding: 10px;
+                                border: 1px solid black;
+
+                                > table {
+                                    width:100%;
+                                }
+
+                                > input[type=text] {
+                                    width: 100%;
+                                    height: 30px;
+                                    line-height: 28px;
+                                    padding: 0 10px;
+                                    border: 1px solid black;
+                                }
+
+                                > label {
+                                    input[type=radio] {
+                                        margin-right: 5px;
+                                    }
+                                }
+
+                                > label + label {
+                                    margin-left: 10px;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -441,6 +489,7 @@ body {
                                 > a:hover {
                                     color: white;
                                     background-color: #606060;
+                                    background-image: initial;
                                 }
                             }
                         }
@@ -456,7 +505,7 @@ body {
                 > a:hover {
                     color: white;
                     background-color: #1067A0;
-                    background-image:initial!important;
+                    background-image: initial !important;
                 }
             }
         }
