--- a/style.less
+++ b/style.less
@@ -71,6 +71,7 @@ body {
                             padding-bottom: 10px !important;
                             padding-left: 10px !important;
                             padding-right: 10px !important;
+                            max-width:20%;
 
                             > a {
                                 display: block;
