--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body .table2 {
   padding-bottom: 10px !important;
   padding-left: 10px !important;
   padding-right: 10px !important;
+  max-width: 20%;
 }
 #browse > #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > a {
   display: block;
